imp: 新增 AddOpens 的配置