@@ -1,14 +1,15 @@
 package org.voovan;
 
-import jdk.internal.module.Modules;
 import org.voovan.tools.TEnv;
 import org.voovan.tools.TProperties;
 import org.voovan.tools.UniqueId;
 import org.voovan.tools.hashwheeltimer.HashWheelTask;
 import org.voovan.tools.hashwheeltimer.HashWheelTimer;
+import org.voovan.tools.reflect.TReflect;
 import org.voovan.tools.threadpool.ThreadPool;
 
 import java.nio.charset.Charset;
+import java.util.Optional;
 import java.util.concurrent.Callable;
 import java.util.concurrent.Future;
 import java.util.concurrent.ThreadPoolExecutor;
@@ -195,22 +196,20 @@ public class Global {
     public static void addOpens() {
         try {
             if (TEnv.JDK_VERSION > 14) {
-                Module module = Modules.findLoadedModule("jdk.unsupported").orElseThrow();
-                Modules.addOpensToAllUnnamed(module, "sun.misc");
-
-                module = Modules.findLoadedModule("java.base").orElseThrow();
-                Modules.addOpensToAllUnnamed(module, "sun.nio.ch");
-                Modules.addOpensToAllUnnamed(module, "jdk.internal.misc");
-                Modules.addOpensToAllUnnamed(module, "java.nio");
-                Modules.addOpensToAllUnnamed(module, "jdk.internal.ref");
-                Modules.addOpensToAllUnnamed(module, "java.net");
-                Modules.addOpensToAllUnnamed(module, "java.security");
-                Modules.addOpensToAllUnnamed(module, "java.lang");
+                TReflect.addOpens("jdk.unsupported", "sun.misc");
+                TReflect.addOpens("java.base", "sun.nio.ch");
+                TReflect.addOpens("java.base", "jdk.internal.misc");
+                TReflect.addOpens("java.base", "java.nio");
+                TReflect.addOpens("java.base", "jdk.internal.ref");
+                TReflect.addOpens("java.base", "java.net");
+                TReflect.addOpens("java.base", "java.security");
+                TReflect.addOpens("java.base", "java.lang");
             }
         } catch (Throwable e) {
+            e.printStackTrace();
             System.out.println("[Warning] Your are working on: JDK-" + TEnv.JDK_VERSION + ". " +
                     "You should add java command arguments: " +
-                    "--add-exports java.base/jdk.internal.module=ALL-UNNAMED");
+                    "--add-opens java.base/jdk.internal.module=ALL-UNNAMED");
             System.exit(-1);
         }
     }
